--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled = true
 spring.h2.console.path = /h2-console
 #spring.jpa.defer-datasource-initialization = true
-spring.jpa.properties.hiberneta.format_sql = true
+#spring.jpa.properties.hiberneta.format_sql = true
 spring.jpa.show-sql = true
-spring.jpa.generate-ddl = true
+#spring.jpa.generate-ddl = true
 #spring.jpa.hibernate.ddl-auto = none
